--- a/index.css
+++ b/index.css
@@ -243,13 +243,13 @@ body {
 
 .post-image {
     width: 100%;
-    width: 600px;
-    height: 600px;
+    width: 500px;
+    height: 500px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
-.comment-section {
+.comment-section {6
     flex: 1;
     padding: 20px;
     overflow-y: auto;
@@ -300,7 +300,7 @@ body {
     border-top: 1px solid #ddd;
     padding: 10px 20px;
     position: absolute;
-    bottom: 0;
+    bottom: 50px;
 }
 
 .comment-input input {
